[gd_scene load_steps=10 format=2]

[ext_resource path="res://VBoxContainer.gd" type="Script" id=1]
[ext_resource path="res://boards and buttons/logo.png" type="Texture" id=2]
[ext_resource path="res://boards and buttons/ace.png" type="Texture" id=3]
[ext_resource path="res://boards and buttons/curious.png" type="Texture" id=4]
[ext_resource path="res://boards and buttons/grail.png" type="Texture" id=5]
[ext_resource path="res://boards and buttons/mercury.png" type="Texture" id=6]
[ext_resource path="res://boards and buttons/sophie.png" type="Texture" id=7]
[ext_resource path="res://exit.png" type="Texture" id=8]
[ext_resource path="res://boards and buttons/bace.png" type="Texture" id=9]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 288.0
margin_bottom = 440.0
custom_constants/separation = 40
script = ExtResource( 1 )

[node name="Logo" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 132.0
size_flags_horizontal = 3
texture = ExtResource( 2 )

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 288.0
margin_bottom = 440.0
size_flags_vertical = 3

[node name="ace" type="TextureRect" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_right = 288.0
margin_bottom = 41.0
size_flags_vertical = 3
texture = ExtResource( 3 )

[node name="curious" type="TextureRect" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 45.0
margin_right = 288.0
margin_bottom = 86.0
size_flags_vertical = 3
texture = ExtResource( 4 )

[node name="grail" type="TextureRect" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 90.0
margin_right = 288.0
margin_bottom = 131.0
size_flags_vertical = 3
texture = ExtResource( 5 )

[node name="mercury" type="TextureRect" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 135.0
margin_right = 288.0
margin_bottom = 176.0
size_flags_vertical = 3
texture = ExtResource( 6 )

[node name="sophie" type="TextureRect" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 180.0
margin_right = 288.0
margin_bottom = 221.0
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="exit" type="TextureRect" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 225.0
margin_right = 288.0
margin_bottom = 268.0
size_flags_vertical = 3
texture = ExtResource( 8 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 292.0
margin_right = 784.0
margin_bottom = 440.0
size_flags_horizontal = 3

[node name="board" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_left = 146.0
margin_top = 140.0
margin_right = 346.0
margin_bottom = 300.0
texture = ExtResource( 9 )
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MenuOptions/ace" to="HBoxContainer/VBoxContainer" method="_on_ace_gui_input"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MenuOptions/curious" to="HBoxContainer/VBoxContainer" method="_on_curious_gui_input"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MenuOptions/grail" to="HBoxContainer/VBoxContainer" method="_on_grail_gui_input"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MenuOptions/mercury" to="HBoxContainer/VBoxContainer" method="_on_mercury_gui_input"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MenuOptions/sophie" to="HBoxContainer/VBoxContainer" method="_on_sophie_gui_input"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/MenuOptions/exit" to="HBoxContainer/VBoxContainer" method="_on_exit_gui_input"]
